# Cart-Checkout

./: README.md  Sample_run.py  alembic.ini  local.env
Cart-Checkout/Cart-Checkout/: setup.cfg
Cart-Checkout/Cart-Checkout/Checkout_store.egg-info/: requires.txt
Cart-Checkout/Cart-Checkout/entities/: checkout.py  pricing_rules.py  product.py
Cart-Checkout/Cart-Checkout/infrastructure/: models.py
Cart-Checkout/Cart-Checkout/use_cases/: cart_checkout.py
Checkout_store.egg-info/: PKG-INFO  SOURCES.txt
alembic/: env.py
alembic/versions/: dca6fd322029_create_products_table.py
infrastructure/: db.py
tests/: test_checkout.py
