[metadata]
name = Checkout-store
version = 1.0.0
description = Checkout service
long_description = file: readme.md
url = 

[options]
packages = find:
install_requires =
    falcon==3.1.0
    SQLAlchemy==2.0.20
    psycopg2-binary==2.9.7
    alembic==1.11.0
    pytest==7.4.0
    pytest-falcon==0.4.1
tests_require =
    pytest
    attrs==19.1.0
zip_safe = False

[tox:tox]
env_list = py311
minversion = 4.4.6
skip_missing_interpreters = True

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --show-diff-on-failure

[testenv:pre-commit-all]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure

[aliases]
test = pytest

[flake8]
max-complexity = 10
max-line-length = 120
extend-ignore = E203
exclude =
    .git,
    .vscode,
    __pycache__,
    .pytest_cache,
    .eggs,
    alembic,
    .tox,

[isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = True
